# vinyl-swarm

./: .gitignore  README.md  Vinyl-Swarm.postman_collection.json
create-a-tui-in-rust/fileviewer-tui/src/: main.rs  tui.rs
documentation/axum/rust-axum-postgres-api/: Cargo.toml  readme.md
documentation/axum/rust-axum-postgres-api/migrations/: 20250304062556_init.up.sql
documentation/axum/rust-axum-postgres-api/src/: handler.rs  main.rs  route.rs
documentation/brevo/send-mail-rust/src/: main.rs
documentation/counter-app/: Cargo.toml
documentation/counter-app/src/: main.rs
documentation/create-a-tui-in-rust/fileviewer-tui/: Cargo.toml
documentation/green-tea-coding/ratatui-tutorial/: Cargo.toml
documentation/green-tea-coding/ratatui-tutorial/src/: main.rs
documentation/json-editor/src/: app.rs  main.rs  ui.rs
documentation/jwt-auth/src/: main.rs
documentation/request-sender/: Cargo.toml
documentation/request-sender/src/: main.rs
documentation/serde/serde-basics/: Cargo.toml
documentation/serde/serde-basics/src/: main.rs
documentation/sqlx/: readme.md
documentation/sqlx/bookstore/: Cargo.toml
documentation/sqlx/bookstore/src/: main.rs
vinyl-swarm/: .env  Cargo.toml
vinyl-swarm/migrations/: 20250308183724_init.down.sql  20250308183724_init.up.sql
vinyl-swarm/src/: main.rs
vinyl-swarm/src/handlers/: mod.rs  record_stores.rs  records.rs  status_handler.rs  users.rs
vinyl-swarm/src/models/: mod.rs  record.rs  store.rs  user.rs
vinyl-swarm/src/routes/: mod.rs  record_stores.rs  records.rs  router.rs  users.rs
