[package]
name = "request-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
base64 = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"